Add Weekly Digest process for Plan stage

--- a/development/dev/plan/index.html.md.erb
+++ b/development/dev/plan/index.html.md.erb
@@ -217,6 +217,39 @@ The DRI is responsible for completing the following actions:
 
 In both the summary comment and video the DRI should be particularly careful to ensure all information disclosed is [SAFE](https://about.gitlab.com/handbook/legal/safe-framework/). If the retrospective discussion contains examples of unSAFE information, the issue should not be made public.
 
+
+### Plan Weekly Digest
+
+#### Background
+
+There are many company, team, process (and other) updates that are important to communicate to team members so that they are not missed. Besides that, there is other information important for day-to-day work. In Plan we use async Weekly updates, called Plan Weekly digest, to communicate these to our team members.
+
+The Engineering Managers in the Plan stage alternate each week as the DRIs. There are 4 groups in the Plan stage, and one SEM, so every EM is the DRI roughly once / 5 weeks.
+
+#### Process
+
+1. A new confidential issue is created every **Monday, 8 UTC**. (automatically)
+1. The issue is assigned to all Plan Engineering Managers.
+1. The EM **responsible** for the content of the issue can be found in the schedule below but all other EMs can contribute to the issue as well.
+1. On **Saturday, 8 UTC** the issue is assigned to all team members (automatically).
+1. On Friday, 8 UTC (next week) the issue is closed.
+
+#### DRIs
+
+| Issue creation (auto) | DRI |
+|---   | ---       |
+| 2023-01-30 | Jarka Košanová |
+| 2023-02-06 | Kushal Pandya |
+| 2023-02-13 | Donald Cook |
+| 2023-02-20 | John Hope |
+| 2023-02-27 | Brandon Labuschagne |
+
+#### Links
+
+- [Current Weekly Digests](https://gitlab.com/gitlab-org/plan/-/issues/?sort=updated_desc&state=opened&label_name%5B%5D=weekly%20update&first_page_size=20)
+- [Closed Weekly Digests](https://gitlab.com/gitlab-org/plan/-/issues/?sort=updated_desc&state=closed&label_name%5B%5D=weekly%20update&first_page_size=20)
+- [Issue Template](https://gitlab.com/gitlab-org/plan/-/blob/master/.gitlab/issue_templates/plan-weekly-digest.md)
+
 ### Meetings
 
 Most of our group meetings are recorded and publicly available on
