--- a/metrics/index.html.md.erb
+++ b/metrics/index.html.md.erb
@@ -286,10 +286,9 @@ The guidelines for inclusion in the `is_part_of_product` lists are:
 Follow these steps to request a new project to be tracked:
 
 1. Create a merge request to the GitLab.com or ops.gitlab.net project list from above.
-1. Assign the merge request to the [Manager of Engineering Productivity team](https://gitlab.com/jennli)
-1. The Manager of the Engineering Productivity team will work with the [Engineering Analyst](https://gitlab.com/lmai1) to determine the changes to MR Rate metrics and provide validation for the projects
-1. The Sr. Director of Revenue is required to review and approve changes to be aware of the list of projects.
-1. The [VP of Development](https://gitlab.com/clefelhocz1) is the DRI to approve the list of projects. Upon approval the merge request author should ask in #data for assistance by a member of the Data Engineering team to merge.
+1. Assign the merge request to the [Engineering Productivity team](https://about.gitlab.com/handbook/engineering/quality/engineering-productivity/#team-members)
+1. The Manager of the Engineering Productivity team will work with the [Engineering Analytics Team](https://about.gitlab.com/handbook/engineering/quality/engineering-analytics/#counterpart-assignments) to determine the changes to MR Rate metrics and provide validation for the projects. For self-service, team members can validate changes to the MR Rate using [this dashboard](https://app.periscopedata.com/app/gitlab/794887/Scratch-Engineering-Metrics:-MR-Rates-for-Proposals).
+1. The [VP of Development](https://gitlab.com/clefelhocz1) is the DRI to approve and merge the list of projects.
 
 There is no need to remove archived projects from the `is_part_of_product` list. Removal of projects will remove historical merge requests from metrics and reduce Merge Request rates.
 
