Cleanse company redirects.yml

--- a/culture/all-remote/management/index.html.md.erb
+++ b/culture/all-remote/management/index.html.md.erb
@@ -337,7 +337,7 @@ It's vital that all-remote companies make KPIs available to all. This not only h
 
 Although KPIs are emotionless, allowing teams to understand what other teams are working towards creates an atmopsphere of compassion, and enables team members to more easily offer help that is specific to an indicator.
 
-Learn more about [KPIs at GitLab](/handbook/ceo/kpis/).
+Learn more about [KPIs at GitLab](/company/kpis/).
 
 ## Encourage flexibility and balance
 
