--- a/culture/all-remote/handbook-first-documentation/index.html.md.erb
+++ b/culture/all-remote/handbook-first-documentation/index.html.md.erb
@@ -117,7 +117,7 @@ This enables anyone at the company, even those who have just joined, to propose 
 
 The beauty of using a tool like [GitLab](https://about.gitlab.com/stages-devops-lifecycle/) to build and evolve a company handbook is that you don't have to have the full table of contents mapped out in advance. Tools like [Almanac](https://almanac.io/), [Notion](https://www.notion.so/), and [Guru](https://www.getguru.com/) can be used as well. Consider the following as an initial guide for top-level organization, but don't hesitate to deviate based on the size, scope, and needs of your firm. 
 
-1. **Company / Building Blocks**: This section houses policies, [values](/handbook/values/), [KPIs](/handbook/ceo/kpis/)/[OKRs](/company/okrs/), and [cultural principles](/company/culture/) that apply to most or all departments in the organization. The suggested list below was curated by [Luke Thomas](https://twitter.com/lukethomas14) in his book [The Anywhere Operating System](https://friday.app/anywhere).
+1. **Company / Building Blocks**: This section houses policies, [values](/handbook/values/), [KPIs](/company/kpis/)/[OKRs](/company/okrs/), and [cultural principles](/company/culture/) that apply to most or all departments in the organization. The suggested list below was curated by [Luke Thomas](https://twitter.com/lukethomas14) in his book [The Anywhere Operating System](https://friday.app/anywhere).
    - Founding story/history of the company
    - Mission, vision, and values
    - Who we serve (customer personas)
