Cleanse company redirects.yml

--- a/board-meetings/index.html.md.erb
+++ b/board-meetings/index.html.md.erb
@@ -214,7 +214,7 @@ For a more detailed overview of navigating the NBV portal, please click here to 
 
 ### Board Deck
 
-1. The deck should start with a CEO Overview section which includes: list of up to ten [GitLab KPIs](/handbook/ceo/kpis/#gitlab-kpis). These should reflect the team’s prioritizations. The expectation is that these metrics will be on the list for a year or longer. The CEO Overview will also include slides on: prior quarter or fiscal year overview, trends, challenges, opportunities and current fiscal year priorities.  
+1. The deck should start with a CEO Overview section which includes: list of up to ten [GitLab KPIs](/company/kpis/#gitlab-kpis). These should reflect the team’s prioritizations. The expectation is that these metrics will be on the list for a year or longer. The CEO Overview will also include slides on: prior quarter or fiscal year overview, trends, challenges, opportunities and current fiscal year priorities.  
 1. The deck highlights 2 key asks for Board input during the meeting. Each ask should have a few key slides that provide historical context, current status, and plans for the future. We strive to have 2 key asks and at least 20 minutes spent on these topics. The key asks are typically presented during the meeting and may include team members from across the organization to join the meeting. 
 1. The deck includes a Sales and Marketing section composed of: an executive summary slide on OKRs and key learnings, prior quarter review, upcoming quarter and fiscal year outlook. It may also include a competitive landscape update and any other relevant key updates. 
 1. The deck includes an R&D section composed of: an executive summary slide on OKRs and key learnings, R&D investments, product themes, efficiency drivers, revenue drivers, and any other key updates. 
@@ -389,7 +389,7 @@ New Director will be be provided with:
   - Materials for meeting: Most recent Board of Directors meeting presentation, Key Review slides, current quarter OKRs. Please do not generate new content. The Staff EBA to the CEO sends material to the new Director at least 72 hours in advance. The meeting is centered around the new Director's questions
   - [GitLab Strategy](https://about.gitlab.com/company/strategy/)
   - [3 year strategy](https://about.gitlab.com/company/strategy/#three-year-strategy)
-  - [Company KPI's](https://about.gitlab.com/handbook/ceo/kpis/)
+  - [Company KPI's](https://about.gitlab.com/company/kpis/)
   - [Quarterly OKRs](https://about.gitlab.com/company/okrs/)
   - [Mitigating Concerns](https://about.gitlab.com/handbook/leadership/mitigating-concerns/)
 1. Finance (CFO) - 80 minutes suggested
