Cleanse company redirects.yml

--- a/business-technology/data-team/how-we-work/index.html.md.erb
+++ b/business-technology/data-team/how-we-work/index.html.md.erb
@@ -272,7 +272,7 @@ Other tips:
 
 1. Once a KPI or other Performance Indicate is defined and assigned a prioritization, the metric will need to be added to Sisense by the data team.
 1. **Before** syncing with the data team to add a KPI to Sisense, the metric must be:
-    - Clearly defined in the relevant section in the handbook and added to the GitLab KPIs [with all of its parts](/handbook/ceo/kpis/#parts-of-a-kpi).
+    - Clearly defined in the relevant section in the handbook and added to the GitLab KPIs [with all of its parts](/company/kpis/#parts-of-a-kpi).
     - Reviewed with the Financial Business Partner for the group.
     - Approved and reviewed by the executive of the group.
 1. Once the KPI is ready to be added into Sisense, create an issue on the [GitLab Data Team Issue Tracker](https://gitlab.com/gitlab-data/analytics/issues) using the [KPI Template](https://gitlab.com/gitlab-data/analytics/blob/master/.gitlab/issue_templates/KPI%20Template.md) or [PI Request Template](https://gitlab.com/gitlab-data/analytics/blob/master/.gitlab/issue_templates/Visualization%20or%20Dashboard-%20New%20Request.md).
