Cleanse company redirects.yml

--- a/infrastructure/team/gitlab-dedicated/index.html.md.erb
+++ b/infrastructure/team/gitlab-dedicated/index.html.md.erb
@@ -166,7 +166,7 @@ _Note_ If you are not seeing the diagram, make sure that you have accepted all c
 
 #### Epic Owners
 
-Each epic has a single DRI who is responsible for delivering the project. DRIs for each epic are listed at the top of the description of each epic per [Epic Structure](/team/gitlab-dedicated/#epic-structure). Epic DRI responsibilities are in [https://about.gitlab.com/handbook/engineering/infrastructure/team/gitlab-dedicated/#epic-owner-responsibilities](https://about.gitlab.com/handbook/engineering/infrastructure/team/gitlab-dedicated/#epic-ownership)
+Each epic has a single DRI who is responsible for delivering the project. DRIs for each epic are listed at the top of the description of each epic per Epic Structure. Epic DRI responsibilities are in [https://about.gitlab.com/handbook/engineering/infrastructure/team/gitlab-dedicated/#epic-owner-responsibilities](https://about.gitlab.com/handbook/engineering/infrastructure/team/gitlab-dedicated/#epic-ownership)
 
 1. Engineering epic DRIs can be found within children epics of [GitLab Dedicated - Limited Availability epic](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/484).
 1. As a [Top Cross-Functional Initiative](https://about.gitlab.com/company/top-cross-functional-initiatives/#cross-functional-initiative-dris), Dedicated has an Initiative DRI and Cross-Functional DRIs. Please see [Dedicated Cross-Functional epic](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/866) and its sub-epics for these DRIs .
