Cleanse company redirects.yml

--- a/kpis/index.html.md.erb
+++ b/kpis/index.html.md.erb
@@ -28,7 +28,7 @@ For example, "Wider community contributions per release" should be in the Commun
 
 ## Legend
 
-The icons below are relevant for [Phase 1](/handbook/business-ops/data-team/kpi-index/#phase-1){:data-ga-name="phase 1"}{:data-ga-location="body"} and can be assigned by anyone at GitLab.
+The icons below are relevant for [Phase 1](/company/kpis/){:data-ga-name="phase 1"}{:data-ga-location="body"} and can be assigned by anyone at GitLab.
 
 📊 KPI is operational, public, and embedded in the GitLab Handbook next to the definition.
 
