Renaming CEO Skips Meeting and Attendees

--- a/team/structure/index.html.md.erb
+++ b/team/structure/index.html.md.erb
@@ -210,10 +210,16 @@ Members of the management group are expected to demonstrate leadership in the wa
 You may occassionally hear of the E-Group hosting an "CEO Skips" call or meeting.
 The CEO Skips group is made up of anyone who reports directly to the e-group. It also includes People Business Partners, Chief of Staffs, and internal communications. 
 It is made up of some ICs, some managers, some directors, and some senior leaders.
-This group is called on to help provide input and communicate messaging when appropriate.
-As an example, the [CEO Skips meets after every e-group offsite](/company/offsite/#ceo-skips-zoom-call).
 
 <iframe class="dashboard-embed" src="https://app.periscopedata.com/shared/eac267ee-22c2-4a1e-87c0-f90db206d930?embed=true" height="500"> </iframe>
+
+## Functional Leaders
+
+Functional Leaders include all CEO Skips and a small number of other team members who are invited by E-Group members. 
+
+This group is called on to help provide input and communicate messaging when appropriate.
+
+As an example, the [Functional Leaders meets after every e-group offsite](/company/offsite/#functional-leaders-zoom-call).
 
 ## Directs-Group
 
