Adds note that SEs are not comissioned

--- a/support/index.html.md.erb
+++ b/support/index.html.md.erb
@@ -46,6 +46,14 @@ Remember, as members of the support team we are the first to interact with someo
  - Be OK if you don't know something. You can always ask someone else.
  - Be comfortable saying no to a customer (but try to suggest a workaround and escalate to a Senior if necessary).
 
+#### We are not commissioned or bonused
+
+Our goal is to provide guidance that will lead to the best results for our customers as they use GitLab. In that, we will often point to documentation, product functionality, or open bugs/feature requests. 
+However, there are times when customers will be best served through one of our commercial offerings.
+
+Support is part of the [Engineering Department](/handbook/engineering/) and Support Engineers are not comissioned or bonused for upsell for additional services, customer purchases, or lead generation. 
+If you recommend [Professional Services](/services/) or moving to a different tier or offering you may link to this section in your recommendation to give the customer assurance you're doing so with no mixed motivations.
+
 ### Our role within GitLab
 
 GitLab Support is part of the [Engineering division](/handbook/engineering/).
