Document how IMOC is scheduled and offboarded

--- a/infrastructure/incident-management/incident-manager-onboarding/index.html.md.erb
+++ b/infrastructure/incident-management/incident-manager-onboarding/index.html.md.erb
@@ -43,6 +43,9 @@ Special Coverage Days will be designated by creation of an Issue. The Issue will
 ### Onboard as an Incident Manager
 To onboard, [create an Incident Manager onboarding issue](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/new?issuable_template=onboarding-im).
 
+### Offboard as an Incident Manager
+If your eligibility status changes or you have been exempted from Incident Manager On Call assignment, [create an Incident Manager offboarding issue](https://gitlab.com/gitlab-com/gl-infra/reliability/-/blob/master/.gitlab/issue_templates/offboarding-im.md).
+
 ### Questions about becoming an Incident Manager
 
 #### Who are the Incident Managers?
@@ -75,6 +78,17 @@ If you have a standing commitment which is longer or does not allow for the info
 
 #### How often will I have an Incident Manager shift?
 Four day shifts mean that, at the most, a Team Member participating in an Incident Manager shift with seven other IMs will have shifts approximately once every month. Each additional Team Members added to the pool in your region extends this timing by 4 days. The more Team Members involved, the less often any individual will have shifts.
+
+#### How are Incident Managers scheduled?
+
+Because new incident managers are being added to the rotation on an ongoing basis, schedules for upcoming months are not final and will shift as folks are added or removed from the rotation.
+
+1. Around the 1st Tuesday of each month:
+  - The coordinator will review any **closed** [~IM-Onboarding::Ready issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?sort=closed_at_desc&state=all&label_name%5B%5D=IM-Onboarding%3A%3AReady&first_page_size=50) since the previous scheduling cycle and add these team members to the schedule. Changes will be made to take effect at the beginning of the second full month after the current day. For example, if the current day is Jan 5, the shift changes will be make to go into effect during the first week of March.
+  - The coordinator will review any **open** IMOC offboarding issues and remove these team members from the schedule moving forward. They will be notified in their offboarding issues confirming their removal from PagerDuty and the offboarding issue will be closed by the coordinator.
+1. An announcement will be posted in the [IMOC Slack Channel](https://gitlab.slack.com/archives/C01NY82EJF6) indicating that the schedule has been modified. Team members who have pre-existing overrides after the modified date (March in the example above) will be notified.
+
+Based on the process above, scheduled incident managers will have approximately 7 weeks time before the scheduled changes to trade their shifts if needed.
 
 #### Can I shift my Incident Manager On Call days around?
 Yes, this is one of the other benefits of having a well staffed pool of Team Members engaged as Incident Managers. Shift "trades" are easy to arrange in Pagerduty. It is your responsibility to ensure that your assigned shift is covered, but in extraordinary circumstances please reach out to the VP of Infrastructure for assistance.  Swapping shifts is totally fine.  Getting someone to cover for you for either planned vacation or a sudden/urgent family matter is something we should all do for each other.
