Rename Manage::Organization entry

--- a/development/dev/index.html.md.erb
+++ b/development/dev/index.html.md.erb
@@ -25,7 +25,7 @@ The Dev sub-department is taking care of the first part of the DevSecOps Lifecyc
   * [Manage:Foundations](/handbook/engineering/development/dev/manage/foundations/)
   * [Manage:Import](/handbook/engineering/development/dev/manage/import)
   * [Manage:Integrations](/handbook/engineering/development/dev/manage/integrations/)
-  * [Manage:Workspace](/handbook/engineering/development/dev/manage/workspace)
+  * [Manage:Organization](/handbook/engineering/development/dev/manage/organization)
 1. [Plan](/handbook/product/categories/#plan-stage)
   * [Plan:Project Management](/handbook/engineering/development/dev/plan-project-management/)
   * [Plan:Product Planning](/handbook/engineering/development/dev/plan/product-planning/)
