Add date of reaction rotation shift change

--- a/development/sec/secure/composition-analysis/index.html.md.erb
+++ b/development/sec/secure/composition-analysis/index.html.md.erb
@@ -63,7 +63,7 @@ After the 19th, we conduct [an asynchronous retrospective](https://about.gitlab.
 On top of our development roadmap, engineering teams need to respond to additional requests (support, community contributions, security vulnerabilities).
 This increases context switching and depending on the load this can drastically impact our ability to achieve our plan.
 As a result, the Composition Analysis development team is actively reserving capacity each iteration to triage and address these requests.
-Each milestone, an engineer is designated to handle each one of these responsibilities, by following the schedule defined in [this epic](https://gitlab.com/groups/gitlab-org/secure/-/epics/1).
+Each milestone, an engineer is designated to handle each one of these responsibilities, by following the schedule defined in [this epic](https://gitlab.com/groups/gitlab-org/secure/-/epics/1). The rotation follows the development cycle, which means from the 18th of current month to the 17th of the following month.
 The total time allocation represents around 10% of the engineering team.
 
 #### Responsibilities - Security
