Document learning for how to run an all remote mentorship program

--- a/people-group/learning-and-development/mentor/index.html.md.erb
+++ b/people-group/learning-and-development/mentor/index.html.md.erb
@@ -236,6 +236,21 @@ These resources are meant to provide both mentors and mentees with additional pe
 1. [Harvard Business Review: What great mentorship looks like in a hybrid workplace](https://hbr.org/2021/05/what-great-mentorship-looks-like-in-a-hybrid-workplace)
 1. [Harvard Business Review: The best mentorship help both people grow](https://hbr.org/2022/01/the-best-mentorships-help-both-people-grow)
 
+# How to organize an all-remote mentorship program
+
+Consider the following practices and lessons learned by the GitLab team when organizing your own all-remote mentorship program. [Open a Merge Request](/handbook/handbook-usage/) to contribute your own learning to list!
+
+1. Share call for applications across multiple channels and do direct outreach to great mentors for the best engagement. Lean on People Business Partners for suggestions of team members who would make great mentors and mentees.
+1. In applications, ask for role, location, and mentorship focus area, along with ideal goals. Use multiple choice questions to easily sort and pair responses.
+1. Give at least 2 weeks for folks to apply as mentors and mentees. Keep applications open past the deadline for rolling applications with a note that late applicants might not be paired. Rolling applications might help fill in the gaps with hard to pair mentors/mentees
+1. Collaborate with Team Member Relations and People Business Partners to ensure that participatns are not on performance improvement plans and that their work performance qualifies them to participate (as program applications outline)
+1. Consider using automation, if available, to pair. At GitLab we haven't used automation yet, but we are exploring it for future iterations.
+1. If pairing manually, set aside at least 1 week to work on making pairs based on application responses. Consider recruiting a committee to delegate to.
+1. Use Slack to send a message to mentors and mentees once paired. Put all relevant information for starting the program into one message and consider using both text and a short video to share this information.
+1. Use a dedicated #mentorship Slack channel to communicate to participants over the length of the program.
+1. Send 1-2 resources via Slack throughout the program to keep participants engaged and learning.
+1. Use Polly or another survey tool to do a 1 month check in with mentees. This helps identify pairs that have not yet met or foks that might have left the company.
+1. Give participants at least 3 weeks to complete the end of program survey. 
 
 
 
