--- a/development/ops/release/index.html.md.erb
+++ b/development/ops/release/index.html.md.erb
@@ -24,13 +24,13 @@ For an understanding of our UX Vision and Strategy, take a look at the [Release 
 
 The following people are permanent members of the Release group:
 
-<%= direct_team(manager_slug: 'nicole-williams') %>
+<%= direct_team(manager_slug: 'vladimir-shushlin') %>
 
 ## Stable Counterparts
 
 The following members of other functional teams are our stable counterparts:
 
-<%= stable_counterparts(role_regexp: /[,&] Release/, manager_slug: 'nicole-williams') %>
+<%= stable_counterparts(role_regexp: /[,&] Release/, manager_slug: 'vladimir-shushlin') %>
 
 ## Technologies
 
